--- a/Assignment/analyst_report.ipynb
+++ b/Assignment/analyst_report.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 355,
+   "execution_count": 529,
    "id": "6e3f185b",
    "metadata": {},
    "outputs": [
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 485,
+   "execution_count": 537,
    "id": "82294f4f",
    "metadata": {},
    "outputs": [],
@@ -146,8 +146,6 @@
     "        if tag == 'p':\n",
     "            self.pdf.ln(4)\n",
     "        if self.current_tag == 'h1':\n",
-    "            self.pdf.ln(4)\n",
-    "        if self.current_tag == 'h2':\n",
     "            self.pdf.ln(2)\n",
     "        self.current_tag = None\n",
     "\n",
@@ -155,8 +153,6 @@
     "        if self.current_tag:\n",
     "            self.pdf.multi_cell(self.col_width, self.line_height, data)\n",
     "            self.pdf.set_x(self.x)\n",
-    "\n",
-    "\n",
     "\n",
     "# Set up PDF\n",
     "pdf = PDF()\n",
@@ -183,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 486,
+   "execution_count": 538,
    "id": "bb0653d5",
    "metadata": {},
    "outputs": [
@@ -201,7 +197,7 @@
       "5                 Share Price               $10.88\n",
       "6             Intrinsic Value               $10.73\n",
       "7          Discount/(Premium)               -1.39%\n",
-      "{'Dividend Yield (%)': np.float64(2.69), 'Earnings Per Share (EPS)': 0.96, 'Price to Earnings (P/E)': np.float64(11.61), 'Return on Assets (ROA %)': np.float64(0.55), 'Return on Equity (ROE %)': 7.68, 'Profit Margin (%)': 27.03, 'Operating Margin (%)': 33.38, 'Price to Book (P/B)': np.float64(0.89), 'Dividend Payout Ratio (%)': 31.19}\n"
+      "{'Dividend Yield (%)': np.float64(2.69), 'Earnings Per Share (EPS)': 0.96, 'Price to Earnings (P/E)': np.float64(11.59), 'Return on Assets (ROA %)': np.float64(0.55), 'Return on Equity (ROE %)': 7.68, 'Profit Margin (%)': 27.03, 'Operating Margin (%)': 33.38, 'Price to Book (P/B)': np.float64(0.89), 'Dividend Payout Ratio (%)': 31.19}\n"
      ]
     }
    ],
@@ -297,17 +293,16 @@
     "right_y = pdf.get_y()\n",
     "\n",
     "# Load image into right column\n",
-    "image_width = col2_w - 10  # leave small gap\n",
+    "image_width = col2_w - 20  # leave small gap\n",
     "\n",
     "# Move cursor after the image\n",
     "pdf.set_y(right_y - 30)  # Adjust 50 to be the height of your image (approx.)\n",
-    "pdf.image('cropped_financial_results.png', x=right_x, y=right_y+5.5, w=image_width)\n",
+    "pdf.image('cropped_financial_results.png', x=right_x+2.5, y=right_y+5.5, w=image_width)\n",
     "\n",
     "pdf.set_y(right_y+35)  # Adjust 50 to be the height of your image (approx.)\n",
     "pdf.set_x(right_x+10)\n",
     "right_x = pdf.get_x()\n",
     "right_y = pdf.get_y()\n",
-    "\n",
     "\n",
     "from Ratios_and_Metrics import financial_metrics_bendigo\n",
     "\n",
@@ -357,7 +352,7 @@
     "line_height = 4\n",
     "for member in group_members:\n",
     "    pdf.set_x(group_left_x)\n",
-    "    pdf.cell(0, line_height, member, ln=True)"
+    "    pdf.cell(0, line_height, member, ln=True)\n"
    ]
   },
   {
@@ -370,24 +365,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 487,
+   "execution_count": 539,
    "id": "9182b7fe",
    "metadata": {},
    "outputs": [
     {
-     "ename": "UnicodeEncodeError",
-     "evalue": "'latin-1' codec can't encode character '\\u2019' in position 9304: ordinal not in range(256)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mUnicodeEncodeError\u001b[39m                        Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[487]\u001b[39m\u001b[32m, line 16\u001b[39m\n\u001b[32m     13\u001b[39m pdf.set_y(\u001b[38;5;28mmax\u001b[39m(y_left_end, y_right_end) + \u001b[32m5\u001b[39m)\n\u001b[32m     15\u001b[39m \u001b[38;5;66;03m# Save it\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m16\u001b[39m \u001b[43mpdf\u001b[49m\u001b[43m.\u001b[49m\u001b[43moutput\u001b[49m\u001b[43m(\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mBEN.pdf\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\Hugh\\Documents\\GITHUB\\FM_equity_research\\.venv\\Lib\\site-packages\\fpdf\\fpdf.py:1065\u001b[39m, in \u001b[36mFPDF.output\u001b[39m\u001b[34m(self, name, dest)\u001b[39m\n\u001b[32m   1063\u001b[39m \u001b[38;5;66;03m#Finish document if necessary\u001b[39;00m\n\u001b[32m   1064\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m(\u001b[38;5;28mself\u001b[39m.state<\u001b[32m3\u001b[39m):\n\u001b[32m-> \u001b[39m\u001b[32m1065\u001b[39m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mclose\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m   1066\u001b[39m dest=dest.upper()\n\u001b[32m   1067\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m(dest==\u001b[33m'\u001b[39m\u001b[33m'\u001b[39m):\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\Hugh\\Documents\\GITHUB\\FM_equity_research\\.venv\\Lib\\site-packages\\fpdf\\fpdf.py:246\u001b[39m, in \u001b[36mFPDF.close\u001b[39m\u001b[34m(self)\u001b[39m\n\u001b[32m    244\u001b[39m \u001b[38;5;28mself\u001b[39m._endpage()\n\u001b[32m    245\u001b[39m \u001b[38;5;66;03m#close document\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m246\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_enddoc\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\Hugh\\Documents\\GITHUB\\FM_equity_research\\.venv\\Lib\\site-packages\\fpdf\\fpdf.py:1636\u001b[39m, in \u001b[36mFPDF._enddoc\u001b[39m\u001b[34m(self)\u001b[39m\n\u001b[32m   1634\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34m_enddoc\u001b[39m(\u001b[38;5;28mself\u001b[39m):\n\u001b[32m   1635\u001b[39m     \u001b[38;5;28mself\u001b[39m._putheader()\n\u001b[32m-> \u001b[39m\u001b[32m1636\u001b[39m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_putpages\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m   1637\u001b[39m     \u001b[38;5;28mself\u001b[39m._putresources()\n\u001b[32m   1638\u001b[39m     \u001b[38;5;66;03m#Info\u001b[39;00m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\Hugh\\Documents\\GITHUB\\FM_equity_research\\.venv\\Lib\\site-packages\\fpdf\\fpdf.py:1170\u001b[39m, in \u001b[36mFPDF._putpages\u001b[39m\u001b[34m(self)\u001b[39m\n\u001b[32m   1167\u001b[39m \u001b[38;5;66;03m#Page content\u001b[39;00m\n\u001b[32m   1168\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m.compress:\n\u001b[32m   1169\u001b[39m     \u001b[38;5;66;03m# manage binary data as latin1 until PEP461 or similar is implemented\u001b[39;00m\n\u001b[32m-> \u001b[39m\u001b[32m1170\u001b[39m     p = \u001b[38;5;28mself\u001b[39m.pages[n].encode(\u001b[33m\"\u001b[39m\u001b[33mlatin1\u001b[39m\u001b[33m\"\u001b[39m) \u001b[38;5;28;01mif\u001b[39;00m PY3K \u001b[38;5;28;01melse\u001b[39;00m \u001b[38;5;28mself\u001b[39m.pages[n] \n\u001b[32m   1171\u001b[39m     p = zlib.compress(p)\n\u001b[32m   1172\u001b[39m \u001b[38;5;28;01melse\u001b[39;00m:\n",
-      "\u001b[31mUnicodeEncodeError\u001b[39m: 'latin-1' codec can't encode character '\\u2019' in position 9304: ordinal not in range(256)"
-     ]
+     "data": {
+      "text/plain": [
+       "''"
+      ]
+     },
+     "execution_count": 539,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -417,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 540,
    "id": "6e2a7ed0",
    "metadata": {},
    "outputs": [
