--- a/Assignment/analyst_report.ipynb
+++ b/Assignment/analyst_report.ipynb
@@ -5,37 +5,29 @@
    "id": "9fb4ac84",
    "metadata": {},
    "source": [
-    "To provide context for the recent financial performance of the company in 1H25, an image was scrapped from the companies recent announcement of key regulatory ratios and indicators of loan book health. These statistics could not be inferred from the yFinance data and thus provided unique value to the report."
+    "To provide context for the recent financial performance of the company in 1H25, an image was scrapped from the companies recent announcement of key regulatory ratios and indicators of loan book health. These statistics could not be inferred from the yFinance data and thus provided unique value to the report. The image was too large for the side banner of the report, and was thus cropped."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 355,
+   "execution_count": 589,
    "id": "6e3f185b",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Image URL: https://www.bendigobank.com.au/contentassets/f4ca4760f8394c3582ce67b6a6334bbc/price-table.png\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import requests\n",
     "from PIL import Image\n",
     "from bs4 import BeautifulSoup\n",
     "from urllib.parse import urljoin\n",
     "\n",
-    "# Step 1: URL is defined\n",
+    "# Step 1: URL of target webpage set\n",
     "url = 'https://www.bendigobank.com.au/media/financial-results-for-the-half-year-ended-31-december-2024/'\n",
     "\n",
-    "# Step 2: Fetch the webpage\n",
+    "# Step 2: Webpage HTML fetched using GET request\n",
     "response = requests.get(url)\n",
     "response.raise_for_status()\n",
     "\n",
-    "# Step 3: Parse the HTML\n",
+    "# Step 3: HTML was pared using BeautifulSoup, a Python library for stripping and handling HTML tags\n",
     "soup = BeautifulSoup(response.text, 'html.parser')\n",
     "\n",
     "# Step 4: Find the image with the specific src\n",
@@ -45,28 +37,21 @@
     "# Step 5: If found, build the full image URL and download\n",
     "if img_tag:\n",
     "    img_url = urljoin(url, img_tag['src'])  # Build absolute URL\n",
-    "    print(f\"Image URL: {img_url}\")\n",
-    "    \n",
-    "    # Optional: Download the image\n",
     "    img_response = requests.get(img_url)\n",
     "    img_response.raise_for_status()\n",
     "    with open('data_table.png', 'wb') as f:\n",
     "        f.write(img_response.content)\n",
     "\n",
-    "# Right column: image instead of placeholder text\n",
     "ORIGINAL_IMAGE = 'financial_results.png'\n",
-    "CROPPED_IMAGE = 'cropped_financial_results.png'  # temp file\n",
+    "CROPPED_IMAGE = 'cropped_financial_results.png'\n",
     "\n",
-    "# Function to crop the left half of an image\n",
-    "def crop_left_half(input_path, output_path):\n",
+    "def crop(input_path, output_path):\n",
     "    with Image.open(input_path) as img:\n",
     "        width, height = img.size\n",
-    "        # Crop (left, top, right, bottom)\n",
     "        left_half = img.crop((0, 0, width // 2 - 5, height))\n",
     "        left_half.save(output_path)\n",
     "\n",
-    "# Crop the image before doing anything else\n",
-    "crop_left_half(ORIGINAL_IMAGE, CROPPED_IMAGE)"
+    "crop(ORIGINAL_IMAGE, CROPPED_IMAGE)"
    ]
   },
   {
@@ -74,12 +59,12 @@
    "id": "8b37e9d2",
    "metadata": {},
    "source": [
-    "To aid in generating an equity research report for Bendigo and Adelaide bank, first a fundamental analysis is performed by defining relevent functions to calculate key profitability, liquidity and efficiency and valuation ratios. "
+    "To generate the report with professional formatting, it was essential that "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 485,
+   "execution_count": 590,
    "id": "82294f4f",
    "metadata": {},
    "outputs": [],
@@ -144,8 +129,10 @@
     "\n",
     "    def handle_endtag(self, tag):\n",
     "        if tag == 'p':\n",
-    "            self.pdf.ln(4)\n",
+    "            self.pdf.ln(2)\n",
     "        if self.current_tag == 'h1':\n",
+    "            self.pdf.ln(2)\n",
+    "        if self.current_tag == 'h2':\n",
     "            self.pdf.ln(2)\n",
     "        self.current_tag = None\n",
     "\n",
@@ -181,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 486,
+   "execution_count": 591,
    "id": "bb0653d5",
    "metadata": {},
    "outputs": [
@@ -199,7 +186,7 @@
       "5                 Share Price               $10.88\n",
       "6             Intrinsic Value               $10.73\n",
       "7          Discount/(Premium)               -1.39%\n",
-      "{'Dividend Yield (%)': np.float64(2.69), 'Earnings Per Share (EPS)': 0.96, 'Price to Earnings (P/E)': np.float64(11.6), 'Return on Assets (ROA %)': np.float64(0.55), 'Return on Equity (ROE %)': 7.68, 'Profit Margin (%)': 27.03, 'Operating Margin (%)': 33.38, 'Price to Book (P/B)': np.float64(0.89), 'Dividend Payout Ratio (%)': 31.19}\n"
+      "{'Dividend Yield (%)': np.float64(2.69), 'Earnings Per Share (EPS)': 0.96, 'Price to Earnings (P/E)': np.float64(11.58), 'Return on Assets (ROA %)': np.float64(0.55), 'Return on Equity (ROE %)': 7.68, 'Profit Margin (%)': 27.03, 'Operating Margin (%)': 33.38, 'Price to Book (P/B)': np.float64(0.89), 'Dividend Payout Ratio (%)': 31.19}\n"
      ]
     }
    ],
@@ -295,11 +282,11 @@
     "right_y = pdf.get_y()\n",
     "\n",
     "# Load image into right column\n",
-    "image_width = col2_w - 20  # leave small gap\n",
+    "image_width = col2_w - 10  # leave small gap\n",
     "\n",
     "# Move cursor after the image\n",
     "pdf.set_y(right_y - 30)  # Adjust 50 to be the height of your image (approx.)\n",
-    "pdf.image('cropped_financial_results.png', x=right_x+2.5, y=right_y+5.5, w=image_width)\n",
+    "pdf.image('cropped_financial_results.png', x=right_x, y=right_y+5.5, w=image_width)\n",
     "\n",
     "pdf.set_y(right_y+35)  # Adjust 50 to be the height of your image (approx.)\n",
     "pdf.set_x(right_x+10)\n",
@@ -368,24 +355,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 487,
+   "execution_count": 592,
    "id": "9182b7fe",
    "metadata": {},
    "outputs": [
     {
-     "ename": "UnicodeEncodeError",
-     "evalue": "'latin-1' codec can't encode character '\\u2019' in position 9304: ordinal not in range(256)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mUnicodeEncodeError\u001b[39m                        Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[487]\u001b[39m\u001b[32m, line 16\u001b[39m\n\u001b[32m     13\u001b[39m pdf.set_y(\u001b[38;5;28mmax\u001b[39m(y_left_end, y_right_end) + \u001b[32m5\u001b[39m)\n\u001b[32m     15\u001b[39m \u001b[38;5;66;03m# Save it\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m16\u001b[39m \u001b[43mpdf\u001b[49m\u001b[43m.\u001b[49m\u001b[43moutput\u001b[49m\u001b[43m(\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mBEN.pdf\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\Hugh\\Documents\\GITHUB\\FM_equity_research\\.venv\\Lib\\site-packages\\fpdf\\fpdf.py:1065\u001b[39m, in \u001b[36mFPDF.output\u001b[39m\u001b[34m(self, name, dest)\u001b[39m\n\u001b[32m   1063\u001b[39m \u001b[38;5;66;03m#Finish document if necessary\u001b[39;00m\n\u001b[32m   1064\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m(\u001b[38;5;28mself\u001b[39m.state<\u001b[32m3\u001b[39m):\n\u001b[32m-> \u001b[39m\u001b[32m1065\u001b[39m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mclose\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m   1066\u001b[39m dest=dest.upper()\n\u001b[32m   1067\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m(dest==\u001b[33m'\u001b[39m\u001b[33m'\u001b[39m):\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\Hugh\\Documents\\GITHUB\\FM_equity_research\\.venv\\Lib\\site-packages\\fpdf\\fpdf.py:246\u001b[39m, in \u001b[36mFPDF.close\u001b[39m\u001b[34m(self)\u001b[39m\n\u001b[32m    244\u001b[39m \u001b[38;5;28mself\u001b[39m._endpage()\n\u001b[32m    245\u001b[39m \u001b[38;5;66;03m#close document\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m246\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_enddoc\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\Hugh\\Documents\\GITHUB\\FM_equity_research\\.venv\\Lib\\site-packages\\fpdf\\fpdf.py:1636\u001b[39m, in \u001b[36mFPDF._enddoc\u001b[39m\u001b[34m(self)\u001b[39m\n\u001b[32m   1634\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34m_enddoc\u001b[39m(\u001b[38;5;28mself\u001b[39m):\n\u001b[32m   1635\u001b[39m     \u001b[38;5;28mself\u001b[39m._putheader()\n\u001b[32m-> \u001b[39m\u001b[32m1636\u001b[39m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_putpages\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m   1637\u001b[39m     \u001b[38;5;28mself\u001b[39m._putresources()\n\u001b[32m   1638\u001b[39m     \u001b[38;5;66;03m#Info\u001b[39;00m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\Hugh\\Documents\\GITHUB\\FM_equity_research\\.venv\\Lib\\site-packages\\fpdf\\fpdf.py:1170\u001b[39m, in \u001b[36mFPDF._putpages\u001b[39m\u001b[34m(self)\u001b[39m\n\u001b[32m   1167\u001b[39m \u001b[38;5;66;03m#Page content\u001b[39;00m\n\u001b[32m   1168\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m.compress:\n\u001b[32m   1169\u001b[39m     \u001b[38;5;66;03m# manage binary data as latin1 until PEP461 or similar is implemented\u001b[39;00m\n\u001b[32m-> \u001b[39m\u001b[32m1170\u001b[39m     p = \u001b[38;5;28mself\u001b[39m.pages[n].encode(\u001b[33m\"\u001b[39m\u001b[33mlatin1\u001b[39m\u001b[33m\"\u001b[39m) \u001b[38;5;28;01mif\u001b[39;00m PY3K \u001b[38;5;28;01melse\u001b[39;00m \u001b[38;5;28mself\u001b[39m.pages[n] \n\u001b[32m   1171\u001b[39m     p = zlib.compress(p)\n\u001b[32m   1172\u001b[39m \u001b[38;5;28;01melse\u001b[39;00m:\n",
-      "\u001b[31mUnicodeEncodeError\u001b[39m: 'latin-1' codec can't encode character '\\u2019' in position 9304: ordinal not in range(256)"
-     ]
+     "data": {
+      "text/plain": [
+       "''"
+      ]
+     },
+     "execution_count": 592,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -415,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 593,
    "id": "6e2a7ed0",
    "metadata": {},
    "outputs": [
