--- a/Assignment/analyst_report.ipynb
+++ b/Assignment/analyst_report.ipynb
@@ -59,28 +59,34 @@
    "id": "8b37e9d2",
    "metadata": {},
    "source": [
-    "To generate the report with professional formatting, it was essential that "
+    "To generate the report with professional formatting, it was essential that the commentary loaded from the commentary.txt file could be formatted properly with heading, paragraphs and footers. The most intuitive solution was to write the commentary in markdown/HTML style text with heading tag, parse those tags using the html.parser package.\n",
+    "\n",
+    "The bulk of the PDF was generated using the FPDF package in two distinct columns."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 590,
-   "id": "82294f4f",
+   "execution_count": null,
+   "id": "850f3a61",
    "metadata": {},
    "outputs": [],
    "source": [
     "from fpdf import FPDF\n",
     "from html.parser import HTMLParser\n",
     "import pandas as pd\n",
-    "import openpyxl\n",
     "\n",
+    "#Step 1: A PDF class is created which is used to define formatting and layout of the PDF document..\n",
     "class PDF(FPDF):\n",
+    "    #Step 2: The header method is defined to add a header to the PDF document with the desired image and formatting.\n",
     "    def header(self):\n",
     "        banner_width = self.w - self.l_margin - self.r_margin\n",
-    "        self.image('test.png', x=self.l_margin, y=0, w=banner_width, h=20)\n",
+    "        self.image('logo.png', x=self.l_margin, y=0, w=banner_width, h=20)\n",
     "        right_margin_x = self.w - self.r_margin\n",
     "        x_text_start = right_margin_x - 60  # Adjust as needed\n",
     "        y_text_start = 4  # Top padding from banner top\n",
+    "        \n",
+    "        #Step 3: The recommendation is drawn over the banner image with a specific font and color.\n",
+    "        #Line 1: \"Recommendation: \"\n",
     "        self.set_y(25)\n",
     "        self.set_xy(x_text_start, y_text_start)\n",
     "        self.set_font('Arial', 'B', 12)\n",
@@ -98,13 +104,15 @@
     "        self.cell(0, 6, \"Downside: -1.39%\", ln=1)\n",
     "        self.set_text_color(0)\n",
     "        self.set_y(25)\n",
-    "\n",
+    "    #Step 4: A footer method is defined to add a footer to the PDF document with the page number.\n",
     "    def footer(self):\n",
     "        self.set_y(-12)\n",
     "        self.set_font('Arial', 'I', 8)\n",
     "        self.cell(0, 8, f'Page {self.page_no()}', align='C')\n",
     "\n",
+    "#Here, the HTMLParser class is defined to handle the parsing of the markdown tags and translate them to formatting in the PDF.\n",
     "class ColumnHTMLParser(HTMLParser):\n",
+    "    #All methods inheret the same functionality defined in __init__ method.\n",
     "    def __init__(self, pdf, x, y, col_width, line_height=5):\n",
     "        super().__init__()\n",
     "        self.pdf = pdf\n",
@@ -115,6 +123,7 @@
     "        self.current_tag = None\n",
     "        self.pdf.set_xy(x, y)\n",
     "\n",
+    "    #Logic is implimented to handle the start and end of HTML tags to change formatting\n",
     "    def handle_starttag(self, tag, attrs):\n",
     "        self.current_tag = tag\n",
     "        if tag == 'h1':\n",
@@ -126,7 +135,7 @@
     "        elif tag == 'p':\n",
     "            self.pdf.set_font('Arial', '', 10)\n",
     "            self.pdf.set_xy(self.x, self.pdf.get_y())\n",
-    "\n",
+    "    #Logic is implimented to handle the end of HTML tags to change formatting.\n",
     "    def handle_endtag(self, tag):\n",
     "        if tag == 'p':\n",
     "            self.pdf.ln(2)\n",
@@ -135,7 +144,7 @@
     "        if self.current_tag == 'h2':\n",
     "            self.pdf.ln(2)\n",
     "        self.current_tag = None\n",
-    "\n",
+    "    #Logic is implimented to handle the content within the HTML tags to change formatting (e.g. line height)\n",
     "    def handle_data(self, data):\n",
     "        if self.current_tag:\n",
     "            self.pdf.multi_cell(self.col_width, self.line_height, data)\n",
@@ -163,12 +172,12 @@
    "id": "62a255f8",
    "metadata": {},
    "source": [
-    "Right hand column content"
+    "The right hand column content consisted of serveral images and a blue highlight banner."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 591,
+   "execution_count": null,
    "id": "bb0653d5",
    "metadata": {},
    "outputs": [
@@ -186,19 +195,19 @@
       "5                 Share Price               $10.88\n",
       "6             Intrinsic Value               $10.73\n",
       "7          Discount/(Premium)               -1.39%\n",
-      "{'Dividend Yield (%)': np.float64(2.69), 'Earnings Per Share (EPS)': 0.96, 'Price to Earnings (P/E)': np.float64(11.58), 'Return on Assets (ROA %)': np.float64(0.55), 'Return on Equity (ROE %)': 7.68, 'Profit Margin (%)': 27.03, 'Operating Margin (%)': 33.38, 'Price to Book (P/B)': np.float64(0.89), 'Dividend Payout Ratio (%)': 31.19}\n"
+      "{'Dividend Yield (%)': np.float64(2.69), 'Earnings Per Share (EPS)': 0.96, 'Price to Earnings (P/E)': np.float64(11.59), 'Return on Assets (ROA %)': np.float64(0.55), 'Return on Equity (ROE %)': 7.68, 'Profit Margin (%)': 27.03, 'Operating Margin (%)': 33.38, 'Price to Book (P/B)': np.float64(0.89), 'Dividend Payout Ratio (%)': 31.19}\n"
      ]
     }
    ],
    "source": [
     "from openpyxl import load_workbook\n",
     "# Right column content\n",
-    "# --------- RIGHT COLUMN (Insert Image) ---------\n",
+    "# Set the starting position for the right column\n",
     "x_right = pdf.l_margin + col1_w + 5  # Start of right column\n",
     "y_right_start = y_start\n",
     "col2_actual_width = col2_w - 5  # Narrow a little for margin space\n",
     "\n",
-    "# Set light blue color for the background\n",
+    "# Set light blue color for the highlight background\n",
     "pdf.set_fill_color(230, 240, 255)  # Very light blue\n",
     "\n",
     "# Draw the rectangle\n",
@@ -207,9 +216,9 @@
     "right_x = pdf.get_x()\n",
     "right_y = pdf.get_y()\n",
     "\n",
-    "# Load the workbook\n",
+    "# First figure is a table from the DDM model, so specific cells from this are loaded using openpyxl into a dataframe.\n",
     "wb = load_workbook('BENDIGO.xlsx', data_only=True)\n",
-    "ws = wb.active  # or wb['YourSheetName']\n",
+    "ws = wb.active\n",
     "\n",
     "# Now manually read D9:J13 and D17:J19 preserving formatting\n",
     "data = []\n",
@@ -222,7 +231,7 @@
     "    value = value_cell.value\n",
     "    fmt = value_cell.number_format\n",
     "\n",
-    "    # Format value and include unit in the value itself\n",
+    "    # Each cell's value is extracted and formatted based on the type of data it contains (e.g. percentages have % added)\n",
     "    if value is None:\n",
     "        display = ''\n",
     "    elif isinstance(value, (int, float)):\n",
@@ -262,14 +271,15 @@
     "df.columns = [\"Metric\", \"Value\"]\n",
     "pdf.set_x(right_x-2.5)\n",
     "right_x = pdf.get_x()\n",
-    "# --------- Draw HEADER row ----------\n",
+    "\n",
+    "# Header row is added to table\n",
     "pdf.set_font('Arial', 'B', 6)  # Bold font\n",
     "for col_name in df.columns:\n",
     "    pdf.cell(col_width, row_height, str(col_name), border='B', align='C')\n",
     "pdf.ln(row_height)\n",
     "pdf.set_x(right_x)\n",
     "\n",
-    "# --------- Draw BODY rows ----------\n",
+    "#All other rows added to table\n",
     "pdf.set_font('Arial', '', 6)  # Back to normal font\n",
     "for i in range(len(df)):\n",
     "    for j in range(len(df.columns)):\n",
@@ -355,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 592,
+   "execution_count": 596,
    "id": "9182b7fe",
    "metadata": {},
    "outputs": [
@@ -365,7 +375,7 @@
        "''"
       ]
      },
-     "execution_count": 592,
+     "execution_count": 596,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -397,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 593,
+   "execution_count": 597,
    "id": "6e2a7ed0",
    "metadata": {},
    "outputs": [
