Added stock price graph

--- a/Assignment/analyst_report.ipynb
+++ b/Assignment/analyst_report.ipynb
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 619,
    "id": "850f3a61",
    "metadata": {},
    "outputs": [],
@@ -195,7 +195,7 @@
       "5                 Share Price               $10.88\n",
       "6             Intrinsic Value               $10.73\n",
       "7          Discount/(Premium)               -1.39%\n",
-      "{'Dividend Yield (%)': np.float64(2.69), 'Earnings Per Share (EPS)': 0.96, 'Price to Earnings (P/E)': np.float64(11.59), 'Return on Assets (ROA %)': np.float64(0.55), 'Return on Equity (ROE %)': 7.68, 'Profit Margin (%)': 27.03, 'Operating Margin (%)': 33.38, 'Price to Book (P/B)': np.float64(0.89), 'Dividend Payout Ratio (%)': 31.19}\n"
+      "{'Dividend Yield (%)': np.float64(2.7), 'Earnings Per Share (EPS)': 0.96, 'Price to Earnings (P/E)': np.float64(11.57), 'Return on Assets (ROA %)': np.float64(0.55), 'Return on Equity (ROE %)': 7.68, 'Profit Margin (%)': 27.03, 'Operating Margin (%)': 33.38, 'Price to Book (P/B)': np.float64(0.89), 'Dividend Payout Ratio (%)': 31.19}\n"
      ]
     }
    ],
@@ -331,6 +331,17 @@
     "        pdf.cell(col_width, row_height, value, border='B', align='C')\n",
     "    pdf.ln(row_height)\n",
     "\n",
+    "#from Stock_Price_Chart import plot_stock_price_chart\n",
+    "#plot_stock_price_chart()\n",
+    "\n",
+    "pdf.set_x(table_start_x)\n",
+    "right_y = pdf.get_y()\n",
+    "\n",
+    "pdf.set_y(right_y - 30)  # Adjust 50 to be the height of your image (approx.)\n",
+    "pdf.image('bendigo_vs_asx200.png', x=right_x-10, y=right_y+5.5, w=image_width)\n",
+    "\n",
+    "\n",
+    "\n",
     "# --- Group member list: positioned relative to table, move as a block ---\n",
     "pdf.set_font('Arial', 'I', 6)\n",
     "\n",
@@ -365,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 596,
+   "execution_count": 621,
    "id": "9182b7fe",
    "metadata": {},
    "outputs": [
@@ -375,7 +386,7 @@
        "''"
       ]
      },
-     "execution_count": 596,
+     "execution_count": 621,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -407,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 597,
+   "execution_count": 622,
    "id": "6e2a7ed0",
    "metadata": {},
    "outputs": [
