Added graphs and moved group names down

--- a/Assignment/analyst_report.ipynb
+++ b/Assignment/analyst_report.ipynb
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 619,
+   "execution_count": 649,
    "id": "850f3a61",
    "metadata": {},
    "outputs": [],
@@ -195,7 +195,7 @@
       "5                 Share Price               $10.88\n",
       "6             Intrinsic Value               $10.73\n",
       "7          Discount/(Premium)               -1.39%\n",
-      "{'Dividend Yield (%)': np.float64(2.7), 'Earnings Per Share (EPS)': 0.96, 'Price to Earnings (P/E)': np.float64(11.57), 'Return on Assets (ROA %)': np.float64(0.55), 'Return on Equity (ROE %)': 7.68, 'Profit Margin (%)': 27.03, 'Operating Margin (%)': 33.38, 'Price to Book (P/B)': np.float64(0.89), 'Dividend Payout Ratio (%)': 31.19}\n"
+      "{'Dividend Yield (%)': np.float64(2.7), 'Earnings Per Share (EPS)': 0.96, 'Price to Earnings (P/E)': np.float64(11.54), 'Return on Assets (ROA %)': np.float64(0.55), 'Return on Equity (ROE %)': 7.68, 'Profit Margin (%)': 27.03, 'Operating Margin (%)': 33.38, 'Price to Book (P/B)': np.float64(0.89), 'Dividend Payout Ratio (%)': 31.19}\n"
      ]
     }
    ],
@@ -336,9 +336,15 @@
     "\n",
     "pdf.set_x(table_start_x)\n",
     "right_y = pdf.get_y()\n",
+    "right_x -= 10\n",
+    "right_y += 5.5\n",
     "\n",
     "pdf.set_y(right_y - 30)  # Adjust 50 to be the height of your image (approx.)\n",
-    "pdf.image('bendigo_vs_asx200.png', x=right_x-10, y=right_y+5.5, w=image_width)\n",
+    "pdf.image('bendigo_vs_asx200.png', x=right_x, y=right_y, w=image_width)\n",
+    "\n",
+    "right_y += 30\n",
+    "pdf.set_y(right_y)  # Adjust 50 to be the height of your image (approx.)\n",
+    "pdf.image('bendigo_vs_asx200.png', x=right_x, y=right_y, w=image_width)\n",
     "\n",
     "\n",
     "\n",
@@ -346,7 +352,7 @@
     "pdf.set_font('Arial', 'I', 6)\n",
     "\n",
     "# Set these two values to control the block position\n",
-    "group_top_y = pdf.get_y() + 100      # vertical position (↓ = larger number)\n",
+    "group_top_y = pdf.get_y() + 65     # vertical position (↓ = larger number)\n",
     "group_left_x = table_start_x + 12   # horizontal position (→ = larger number)\n",
     "\n",
     "# Move to starting position\n",
@@ -376,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 621,
+   "execution_count": 651,
    "id": "9182b7fe",
    "metadata": {},
    "outputs": [
@@ -386,7 +392,7 @@
        "''"
       ]
      },
-     "execution_count": 621,
+     "execution_count": 651,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -418,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 622,
+   "execution_count": 652,
    "id": "6e2a7ed0",
    "metadata": {},
    "outputs": [
