Added graph construction function back out of comment (was originally removed for processing time)

--- a/Assignment/analyst_report.ipynb
+++ b/Assignment/analyst_report.ipynb
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 649,
+   "execution_count": 653,
    "id": "850f3a61",
    "metadata": {},
    "outputs": [],
@@ -254,9 +254,7 @@
     "\n",
     "    data.append([label, display])\n",
     "\n",
-    "print(data)\n",
     "df = pd.DataFrame(data)\n",
-    "print(df)\n",
     "\n",
     "pdf.set_xy(pdf.l_margin + col1_w + 10, y_start)\n",
     "right_x = pdf.get_x()\n",
@@ -331,8 +329,8 @@
     "        pdf.cell(col_width, row_height, value, border='B', align='C')\n",
     "    pdf.ln(row_height)\n",
     "\n",
-    "#from Stock_Price_Chart import plot_stock_price_chart\n",
-    "#plot_stock_price_chart()\n",
+    "from Stock_Price_Chart import plot_stock_price_chart\n",
+    "plot_stock_price_chart()\n",
     "\n",
     "pdf.set_x(table_start_x)\n",
     "right_y = pdf.get_y()\n",
@@ -382,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 651,
+   "execution_count": 655,
    "id": "9182b7fe",
    "metadata": {},
    "outputs": [
@@ -392,7 +390,7 @@
        "''"
       ]
      },
-     "execution_count": 651,
+     "execution_count": 655,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -424,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 652,
+   "execution_count": 656,
    "id": "6e2a7ed0",
    "metadata": {},
    "outputs": [
