--- a/Assignment/analyst_report.ipynb
+++ b/Assignment/analyst_report.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 589,
+   "execution_count": 665,
    "id": "6e3f185b",
    "metadata": {},
    "outputs": [],
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 653,
+   "execution_count": 666,
    "id": "850f3a61",
    "metadata": {},
    "outputs": [],
@@ -182,20 +182,25 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[*********************100%***********************]  1 of 1 completed\n",
+      "[*********************100%***********************]  1 of 1 completed"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[['Valuation Date', '2025-04-25 00:00:00'], ['Share Price', '$10.88'], ['Diluted Shares Outstanding', '567m'], ['Cost of Equity', '8.69%'], ['Terminal Growth Rate', '2.50%'], ['Share Price', '$10.88'], ['Intrinsic Value', '$10.73'], ['Discount/(Premium)', '-1.39%']]\n",
-      "                            0                    1\n",
-      "0              Valuation Date  2025-04-25 00:00:00\n",
-      "1                 Share Price               $10.88\n",
-      "2  Diluted Shares Outstanding                 567m\n",
-      "3              Cost of Equity                8.69%\n",
-      "4        Terminal Growth Rate                2.50%\n",
-      "5                 Share Price               $10.88\n",
-      "6             Intrinsic Value               $10.73\n",
-      "7          Discount/(Premium)               -1.39%\n",
       "{'Dividend Yield (%)': np.float64(2.7), 'Earnings Per Share (EPS)': 0.96, 'Price to Earnings (P/E)': np.float64(11.54), 'Return on Assets (ROA %)': np.float64(0.55), 'Return on Equity (ROE %)': 7.68, 'Profit Margin (%)': 27.03, 'Operating Margin (%)': 33.38, 'Price to Book (P/B)': np.float64(0.89), 'Dividend Payout Ratio (%)': 31.19}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     }
    ],
@@ -342,7 +347,7 @@
     "\n",
     "right_y += 30\n",
     "pdf.set_y(right_y)  # Adjust 50 to be the height of your image (approx.)\n",
-    "pdf.image('bendigo_vs_asx200.png', x=right_x, y=right_y, w=image_width)\n",
+    "pdf.image('bendigo_vs_targets.png', x=right_x, y=right_y, w=image_width)\n",
     "\n",
     "\n",
     "\n",
@@ -380,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 655,
+   "execution_count": null,
    "id": "9182b7fe",
    "metadata": {},
    "outputs": [
@@ -390,7 +395,7 @@
        "''"
       ]
      },
-     "execution_count": 655,
+     "execution_count": 663,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -422,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 656,
+   "execution_count": null,
    "id": "6e2a7ed0",
    "metadata": {},
    "outputs": [
