Square graphs made larger in right column of analyst report

--- a/Assignment/analyst_report.ipynb
+++ b/Assignment/analyst_report.ipynb
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 666,
+   "execution_count": 682,
    "id": "850f3a61",
    "metadata": {},
    "outputs": [],
@@ -177,30 +177,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 683,
    "id": "bb0653d5",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[*********************100%***********************]  1 of 1 completed\n",
-      "[*********************100%***********************]  1 of 1 completed"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'Dividend Yield (%)': np.float64(2.7), 'Earnings Per Share (EPS)': 0.96, 'Price to Earnings (P/E)': np.float64(11.54), 'Return on Assets (ROA %)': np.float64(0.55), 'Return on Equity (ROE %)': 7.68, 'Profit Margin (%)': 27.03, 'Operating Margin (%)': 33.38, 'Price to Book (P/B)': np.float64(0.89), 'Dividend Payout Ratio (%)': 31.19}\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
+      "{'Dividend Yield (%)': np.float64(2.7), 'Earnings Per Share (EPS)': 0.96, 'Price to Earnings (P/E)': np.float64(11.55), 'Return on Assets (ROA %)': np.float64(0.55), 'Return on Equity (ROE %)': 7.68, 'Profit Margin (%)': 27.03, 'Operating Margin (%)': 33.38, 'Price to Book (P/B)': np.float64(0.89), 'Dividend Payout Ratio (%)': 31.19}\n"
      ]
     }
    ],
@@ -334,8 +319,8 @@
     "        pdf.cell(col_width, row_height, value, border='B', align='C')\n",
     "    pdf.ln(row_height)\n",
     "\n",
-    "from Stock_Price_Chart import plot_stock_price_chart\n",
-    "plot_stock_price_chart()\n",
+    "#from Stock_Price_Chart import plot_stock_price_chart\n",
+    "#plot_stock_price_chart()\n",
     "\n",
     "pdf.set_x(table_start_x)\n",
     "right_y = pdf.get_y()\n",
@@ -345,7 +330,7 @@
     "pdf.set_y(right_y - 30)  # Adjust 50 to be the height of your image (approx.)\n",
     "pdf.image('bendigo_vs_asx200.png', x=right_x, y=right_y, w=image_width)\n",
     "\n",
-    "right_y += 30\n",
+    "right_y += 60\n",
     "pdf.set_y(right_y)  # Adjust 50 to be the height of your image (approx.)\n",
     "pdf.image('bendigo_vs_targets.png', x=right_x, y=right_y, w=image_width)\n",
     "\n",
@@ -370,9 +355,9 @@
     "]\n",
     "\n",
     "line_height = 4\n",
-    "for member in group_members:\n",
-    "    pdf.set_x(group_left_x)\n",
-    "    pdf.cell(0, line_height, member, ln=True)"
+    "#for member in group_members:\n",
+    "    #pdf.set_x(group_left_x)\n",
+    "    #pdf.cell(0, line_height, member, ln=True)"
    ]
   },
   {
@@ -385,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 684,
    "id": "9182b7fe",
    "metadata": {},
    "outputs": [
@@ -395,7 +380,7 @@
        "''"
       ]
      },
-     "execution_count": 663,
+     "execution_count": 684,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -427,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 685,
    "id": "6e2a7ed0",
    "metadata": {},
    "outputs": [
